syntax = "proto3";

service UserServices {
    rpc Register(UserData) returns (RegistrationResponse){};
    rpc OtpVerify(OtpVerifyRequest) returns (OtpVerifyResponse){};
    rpc Login(LoginRequest) returns (LoginResponse){};
    rpc LoginwithGoogle(GoogleLoginRequest) returns (GoogleLoginResponse){};
    rpc Getall(Empty) returns (GetAllUsersResponse){};
    rpc UpdateStatus(UserData) returns (GetAllUsersResponse){};
    rpc EmailValidate(Email) returns (EmailSuccess){};
    rpc Passwordotp(passwordOtp) returns (passwordOtpResponse){};
    rpc Passwordreset(resetPassword) returns (resetPasswordResponse){};
    rpc ResendOtp(Email) returns (EmailSuccess){};
    rpc GetUserData(UserId) returns (UserData){};
    rpc UpdateJobStatus(UpdateJobStatusRequest) returns (UpdateJobStatusResponse){};
    rpc GetStatus(statusRequest) returns (statusResponse){};
    rpc UserDetails(UserId) returns (UserData){};
    rpc UpdateCover(Photo) returns (passwordOtpResponse){};
    rpc UpdateProfile(Photo) returns (passwordOtpResponse){};
    rpc UpdateProfileData(profileData) returns (passwordOtpResponse){};
    rpc UpdateEducationData(educationData) returns (passwordOtpResponse){};
    rpc UpdateExperienceData(experienceData) returns (passwordOtpResponse){};
    rpc UpdateSkillsData(skillsData) returns (passwordOtpResponse){};
    rpc GetFollowings(UserId) returns (Followings){};
    rpc FollowUser(Follow) returns (passwordOtpResponse){};
    rpc UnFollowUser(Follow) returns (passwordOtpResponse){};
    rpc SearchUser(search) returns (searchesUserResponse){};
    rpc Logout(UserId) returns (OtpVerifyResponse){};

}

message Empty {

}

message JobDetails {
  string jobId = 1;
  string status = 2;
  string _id = 3;
}

message search {
  string text = 1;
}

message Education {
  string school = 1;
  string degree = 2;
  string field = 3;
  string started = 4;
  string ended = 5;
}

message Skill {
  string skill = 1;
}

message Experience {
  string company = 1;
  string role = 2;
  string started = 3;
  string ended = 4;
}

message UserData {
    string username = 1;
    string email = 2;
    string mobile = 3;
    string password = 4;
    bool isActive = 5;
    string _id = 6;
    string avatar = 7;
    repeated Education education = 8;
    repeated Skill skills = 9;
    repeated JobDetails appliedJobs = 10;
    bool isAdmin = 11;
    string banner = 12;
    string header = 13;
    repeated Experience experience = 14;
    string lastLogged = 15;
}

message searchesUserResponse {
  repeated UserData users = 1;
}

message RegistrationResponse {
    bool success = 1;
    UserData data = 2;
    string msg = 3;
    string otp = 4 ;
}

message OtpVerifyRequest {
   UserData userdata = 1;
   string otp = 2;
   string enterOtp = 3;
}

message OtpVerifyResponse {
    bool success = 1;
    string message = 2;
    UserData userdata = 3;

}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
  bool isAdmin = 1;
  bool success = 2;
  UserData user = 3; 
}

message GoogleLoginRequest {
  string credential = 1;
}

message GoogleLoginResponse {
  bool success = 1;
  User user = 2;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
}

message GetAllUsersResponse {
    repeated UserData users = 1;
}

message Email {
    string email = 1;
}

message EmailSuccess {
    bool success = 1;
    string otp = 2;
}

message passwordOtp {
  string otp = 1;
  string email = 2;
  string enteredOtp = 3;
}

message passwordOtpResponse {
  bool success = 1;
  string msg = 2;
}

message resetPassword {
   string email = 1;
   string password = 2;
}

message resetPasswordResponse {
  bool success = 1;
}

message UserId {
  string userId = 1;
}

message UpdateJobStatusRequest {
  string userid = 1;
  string jobid = 2;
  string status = 3;
}

message UpdateJobStatusResponse {
  bool success = 1;
}

message statusRequest {
  string userId = 1;
}

message statusResponse {
  bool status = 1;
}

message FileDetails {
  string originalname = 1;
  string encoding = 2;
  string mimetype = 3;
  bytes buffer = 4; 
  int64 size = 5;
}

message Photo {
  FileDetails image = 1;
  string userId = 2;
}

message profileData {
  string id = 1;
  string mobile = 2;
  string header = 3;
}

message educationData {
  string userId = 1;
  string school = 2;
  string degree = 3;
  string field = 4;
  string started = 5;
  string ended = 6;
}

message experienceData {
  string userId = 1;
  string company = 2;
  string role = 3;
  string started = 4;
  string ended = 5;
}

message skillsData {
  string skill = 1;
  string userId = 2;
}

message Followings {
  repeated string followings = 1;
  repeated string followers = 2;
}

message Follow {
  string userId = 1;
  string guestId = 2;
}
